# T5-title-generation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
