[project]
name = "t5-finetune-4-title"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.38.0",
    "transformers==4.41.2",
    "accelerate==0.31.0",
    "torch==2.3.1",
]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
