[project]
name = "t5-finetune-4-title"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.31.0",
    "bitsandbytes>=0.48.2",
    "fastapi>=0.121.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
